--- a/automation.practice/test-output/old/Default suite/classes.html
+++ b/automation.practice/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>automation.practice.firebox_headlessBrowser</td>
+<td>automation.practice.GenerateScreenShotPDF</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>chromeheadless</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ffheadless</td>
+<td>pdfScreesnshot</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
